profiles/remote-seoy/cilium/desired/routes/dev-space-observability-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dev-space-observability
  namespace: dev-space
spec:
  hostnames:
    - dev-space.10.113.24.96.nip.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: harbor
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: dev-space-observability
          port: 80
