profiles/remote-seoy/cilium/desired/routes/harbor-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  hostnames:
    - harbor.10.113.24.96.nip.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: harbor
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: harbor
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: harbor
          port: 80
